# anysync

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  shell.nix
app/: build.gradle.kts  docker-compose.yml  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/example/anysync/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/anysync/: Check.kt  GetManyWs.kt  MainActivity.kt  MainViewModel.kt  SyncManyWs.kt
app/app/src/main/java/com/example/anysync/data/: File.kt  MainDatabase.kt  Source.kt
app/app/src/main/java/com/example/anysync/ui/components/: EditSource.kt  IconLabelButton.kt  Scheduler.kt  Source.kt
app/app/src/main/java/com/example/anysync/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/java/com/example/anysync/utils/: Check.kt  SyncManyWs.kt
app/app/src/main/java/com/example/anysync/workers/: GetAllWsWorker.kt  GetWsWorker.kt  ScheduledSync.kt  SetWsWorker.kt
app/app/src/main/res/drawable/: arrow_downward_rounded_48.xml  arrow_upward_rounded_48.xml  folder_rounded_48.xml  schedule_rounded_48.xml  sync_alt_rotated_rounded_48.xml  sync_rounded_48.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/example/anysync/: ExampleUnitTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
client/: Cargo.toml
client/src/: check.rs  config.rs  get_file.rs  main.rs  ws_transfer_handlers.rs
lib/: Cargo.toml
lib/src/: diff.rs  file_stream.rs  lib.rs  paths.rs
server/: Cargo.toml
server/src/: config.rs  file_stream.rs  get_file.rs  main.rs  msg.rs  paths.rs  recieve_file.rs  send_file.rs  stream_file.rs  ws.rs  ws_transfer_handlers.rs
