[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../lib" }

clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
