[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
headers = "0.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
