[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = "0.14.0"
serde = "1.0.200"
lazy_static = "1.4.0"

